# dxx-redux

./: .gitignore  CMakeLists.txt
.github/parameters/: setup-macports.yaml
.github/workflows/: package-macos-arm.yml  package-macos.yml
contrib/packaging/linux/: build_package.sh  com.dxx_redux.dxx-redux.d1x-redux.desktop  com.dxx_redux.dxx-redux.d1x-redux.metainfo.xml  com.dxx_redux.dxx-redux.d1x-redux.xpm  com.dxx_redux.dxx-redux.d2x-redux.desktop  com.dxx_redux.dxx-redux.d2x-redux.metainfo.xml  com.dxx_redux.dxx-redux.d2x-redux.xpm  com.dxx_redux.dxx-redux.desktop  com.dxx_redux.dxx-redux.metainfo.xml  com.dxx_redux.dxx-redux.sh  com.dxx_redux.dxx-redux.xpm
d1/: CMakeLists.txt
d1/2d/: CMakeLists.txt
d1/3d/: CMakeLists.txt
d1/arch/cocoa/: CMakeLists.txt
d1/arch/ogl/: CMakeLists.txt
d1/arch/sdl/: CMakeLists.txt
d1/arch/win32/: CMakeLists.txt
d1/arch/x11/: CMakeLists.txt
d1/debian/: rules
d1/editor/: CMakeLists.txt
d1/iff/: CMakeLists.txt
d1/main/: CMakeLists.txt
d1/maths/: CMakeLists.txt
d1/mem/: CMakeLists.txt
d1/misc/: CMakeLists.txt
d1/texmap/: CMakeLists.txt
d1/ui/: CMakeLists.txt
d1/xmodel/: CMakeLists.txt
d2/: CMakeLists.txt
d2/2d/: CMakeLists.txt
d2/3d/: CMakeLists.txt
d2/arch/cocoa/: CMakeLists.txt
d2/arch/ogl/: CMakeLists.txt
d2/arch/sdl/: CMakeLists.txt
d2/arch/win32/: CMakeLists.txt
d2/arch/x11/: CMakeLists.txt
d2/debian/: rules
d2/editor/: CMakeLists.txt
d2/iff/: CMakeLists.txt
d2/libmve/: CMakeLists.txt
d2/main/: CMakeLists.txt
d2/maths/: CMakeLists.txt
d2/mem/: CMakeLists.txt
d2/misc/: CMakeLists.txt
d2/texmap/: CMakeLists.txt
d2/ui/: CMakeLists.txt
d2/xmodel/: CMakeLists.txt
